# Personal-Assistant-OS

./: .env.example  .gitignore  CLAUDE.md  CODE_REVIEW.md  IMPLEMENTATION_SUMMARY.md  README.md  VOICE_SETUP.md  pyproject.toml  requirements.txt
src/: __init__.py  agent.py  cli.py  config.py  session.py  voice_cli.py
src/orchestrator/: __init__.py  engine.py  runner.py
src/orchestrator/agents/: __init__.py  email_agent.py  general_agent.py  task_agent.py
src/voice/: __init__.py  streaming.py
