[project]
name = "personal-assistant-os"
version = "0.1.0"
description = "A Python-based interactive CLI chatbot powered by Claude Agent SDK"
requires-python = ">=3.11"
dependencies = [
    "claude-agent-sdk>=0.1.0",
    "python-dotenv>=1.0.0",
    "rich>=13.0.0",
    "aiofiles>=23.0.0",
]

[project.scripts]
chatbot = "src.cli:main"
